tests/integration/snapshots/integration__commands__format__STRING_UNICODE_SPACE_ESCAPE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\u0020"
stdout ---
"\u0020"

stderr ---
