tests/integration/snapshots/integration__commands__format__VALID_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
98.8
stdout ---
98.8

stderr ---
