tests/integration/snapshots/integration__commands__format__VALID_TRAILING_ZEROS_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
1.0000
stdout ---
1.0000

stderr ---
