tests/integration/snapshots/integration__commands__format__ZERO.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
0
stdout ---
0

stderr ---
