tests/integration/snapshots/integration__commands__format__eol_invalid_number.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--eol=899889"]
status: 2
success: false
stdin ---
<no stdin passed>
stdout ---

stderr ---
error: invalid value '899889' for '--end-of-line <END_OF_LINE>'
  [possible values: lf, crlf]

For more information, try '--help'.
