tests/integration/snapshots/integration__commands__format__format_help.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--help"]
status: 0
success: true
stdin ---
<no stdin passed>
stdout ---
Make your json look really good

Usage: jjp format [OPTIONS]

Options:
  -u, --uglify
          Removes all insignificant whitespace instead of pretty printing, also known as minifying. Cannot be combined with --preferred-width or --json-lines
      --preferred-width <PREFERRED_WIDTH>
          Preferred maximum line width. Note this is not a hard maximum width [default: 80]
      --end-of-line <END_OF_LINE>
          Line ending to use when formatting output [default: lf] [aliases: --eol] [possible values: lf, crlf]
      --json-lines
          Parses as JSON Lines and uglifies each value. Cannot be combined with --uglify
  -h, --help
          Print help

Examples:
	$ echo -en "{ \"rust\":\"is a must\"   } " | jjp format
	{ "rust": "is a must" }

	$ echo -en "{ \"shoppingList\": [\"cheese\", \"slushy machine\"]   } " | jjp format --uglify
	{"shoppingList":["cheese","slushy machine"]}

stderr ---
